@@ -3,6 +3,10 @@
 	* getopt.c [DJGPP]: Change to __DJGPP__.
 	* mbsupport.h [DJGPP]: Change to __DJGPP__.
 
+	Unrelated:
+
+	* awk.h: Workarounds for _TANDEM_SOURCE.
+
 2012-05-01         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* dfa.c: Sync with GNU grep. RRI code now there, needed additional
